chore: Test COBS functions

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -53,6 +53,11 @@ macro(add_test TEST_NAME)
     catch_discover_tests(${TEST_NAME})
 endmacro(add_test)
 
+add_test(_cobsDecode_test)
+add_test(_cobsEncode_test)
+add_test(_cobsEncodedLength_test)
+add_test(_cobsEncodedMaxLength_test)
+add_test(_cobsGuaranteedFit_test)
 add_test(_crcAdd_test)
 add_test(_crcError_test)
 add_test(_errDoc_test)
