--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -196,6 +196,12 @@ jobs:
     if: ${{ github.event_name == 'push' && needs.build_ci_docker_image.result == 'success' }}
 
     steps:
+      - name: Download image artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: note_c_ci_image
+          path: /tmp
+
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
@@ -203,11 +209,7 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Push image to registry
-        uses: docker/build-push-action@v4
-        with:
-          push: true
-          tags: ghcr.io/blues/note_c_ci:latest
+      - name: Load and push image
+        run: |
+          docker load --input /tmp/note_c_ci_image.tar
+          docker push ghcr.io/blues/note_c_ci:latest
