--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,13 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
+  workflow_dispatch:
+    inputs:
+      force_build:
+        description: 'Force rebuild and publish Docker image (even if Dockerfile unchanged)'
+        required: false
+        type: boolean
+        default: false
 
 jobs:
   check_dockerfile_changed:
@@ -30,7 +37,7 @@ jobs:
   build_ci_docker_image:
     runs-on: ubuntu-latest
     needs: [check_dockerfile_changed]
-    if: ${{ needs.check_dockerfile_changed.outputs.changed == 'true' }}
+    if: ${{ needs.check_dockerfile_changed.outputs.changed == 'true' || inputs.force_build == true }}
 
     steps:
       - name: Checkout code
@@ -192,10 +199,16 @@ jobs:
     runs-on: ubuntu-latest
     # Make sure unit tests unit tests passed before publishing.
     needs: [build_ci_docker_image, run_unit_tests]
-    # Only publish the image if this is a push event and the Docker image was rebuilt
-    if: ${{ github.event_name == 'push' && needs.build_ci_docker_image.result == 'success' }}
+    # Only publish the image if this is a push event (or manual trigger with force_build) and the Docker image was rebuilt
+    if: ${{ (github.event_name == 'push' || (github.event_name == 'workflow_dispatch' && inputs.force_build == true)) && needs.build_ci_docker_image.result == 'success' }}
 
     steps:
+      - name: Download image artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: note_c_ci_image
+          path: /tmp
+
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
@@ -203,11 +216,7 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Push image to registry
-        uses: docker/build-push-action@v4
-        with:
-          push: true
-          tags: ghcr.io/blues/note_c_ci:latest
+      - name: Load and push image
+        run: |
+          docker load --input /tmp/note_c_ci_image.tar
+          docker push ghcr.io/blues/note_c_ci:latest
